# robotraconteur_camera_driver

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  robotraconteur_camera_driver.py
config/: azure_kinect_default_camera_info.yml  generic_webcam_1080p_default_camera_info.yml  generic_webcam_720p_default_camera_info.yml
examples/: camera_client_aruco_detection.py  camera_client_aruco_detection_example.py  camera_client_calibrate_intrinsic.py  camera_client_capture_calibration_images.py  camera_client_capture_frame.py  camera_client_capture_frame_compressed.py  camera_client_image.py  camera_client_image_preview.py
